# FUPK3

./: LICENSE  Other.md  Readme.md
AndroidSource/: dalvik_vm_patch.txt  framework_base_core_patch.txt
FUnpackServer/: .gitignore  (+2 more)
FUpk3/app/src/main/cpp/: CMakeLists.txt  core_Fupk.cpp  core_Fupk.h  main.cpp
FUpk3/app/src/main/cpp/AndroidDef/: AndroidDef.h  BaseDef.cpp  BaseDef.h  CMakeLists.txt  MinAndroidDef.h  README.md
FUpk3/app/src/main/cpp/AndroidDef/dexdump/: DexDump.cpp  DexDump.h
FUpk3/app/src/main/cpp/AndroidDef/libdex/: CmdUtils.cpp  CmdUtils.h  DexCatch.cpp  DexCatch.h  DexClass.cpp  DexClass.h  DexDataMap.cpp  DexDataMap.h  DexDebugInfo.cpp  DexDebugInfo.h  DexFile.cpp  DexFile.h  DexOpcodes.cpp  DexOpcodes.h  DexOptData.cpp  DexOptData.h  DexProto.cpp  DexProto.h  DexSwapVerify.cpp  DexUtf.cpp  DexUtf.h  InstrUtils.cpp  InstrUtils.h  Leb128.cpp  Leb128.h  SysUtil.cpp  SysUtil.h  ZipArchive.cpp  ZipArchive.h  sha1.cpp  sha1.h
FUpk3/app/src/main/cpp/AndroidDef/vm/: Common.h  Dalvik.h  DvmDex.cpp  DvmDex.h  Hash.cpp  Hash.h  Inlines.h  JniInternal.h  native.h
FUpk3/app/src/main/cpp/AndroidDef/vm/oo/: Class.cpp  Class.h  Object.cpp  Object.h  Resolve.cpp  Resolve.h
FUpk3/app/src/main/cpp/DexHelper/: CMakeLists.txt  ClassDefBuilder.cpp  ClassDefBuilder.h  Cookie.cpp  Cookie.h  DexDumper.cpp  DexDumper.h  DexFixer.cpp  DexFixer.h  DexHashTable.cpp  DexHashTable.h  Fupk.cpp  Fupk.h  FupkImpl.cpp  FupkImpl.h  JniInfo.cpp  JniInfo.h  UnpackInfo.cpp  UnpackInfo.h
FUpk3/app/src/main/cpp/utils/: CMakeLists.txt  RWGuard.cpp  RWGuard.h  myfile.cpp  myfile.h
(+49 files in other folders)
